我要接单页面初展示

--- a/translate-top/translate-wei-view/pages/orders/orders.wxml
+++ b/translate-top/translate-wei-view/pages/orders/orders.wxml
@@ -39,37 +39,39 @@
         </view>
         <!--分类-->
 
-        <!--详情-->
-        <view class="nav_section">
-          <view wx:if="{{orders}}">
-              <block wx:for="{{orders}}" wx:key="item.id">
-                  <view class="nav_section_items" >
-                      <!--image-->
-                      <view class="section_image" bindtap="navigateDetail" data-aid="{{item.id}}">
-                      <block wx:if="{{item.coverpath}}">
-                          <image src="{{item.coverpath}}" mode="aspectFill"></image>
-                      </block>
-                      <block wx:else>
-                          <image src="../../images/orders.png" mode="aspectFill"></image>
-                      </block>
-                      </view>
-                      <!--content-->
-                      <view class="section_cont" bindtap="navigateDetail" data-aid="{{item.id}}">
-                          <view class="section_cont_sub">
-                              <text>{{item.subject}}</text>
-                          </view>
-                          <view class="section_cont_price">价格：{{item.price}}</view>
-                          <view>{{item.message}}</view>
-                      </view>
-                      <!--book-->
-                      <view class="section_book" bindtap="bookTap" data-aid="{{item.id}}">
-                              <text>立即抢单</text>
-                      </view>
-                  </view>   
-              </block>
-          </view> 
-          <view wx:else>暂无数据</view>
-        </view>
-        <!--详情-->
+        <scroll-view  scroll-y="true" style="height:350px;">
+          <!--详情-->
+          <view class="nav_section">
+            <view wx:if="{{orders}}">
+                <block wx:for="{{orders}}" wx:key="item.id">
+                    <view class="nav_section_items" >
+                        <!--image-->
+                        <view class="section_image" bindtap="navigateDetail" data-aid="{{item.id}}">
+                        <block wx:if="{{item.coverpath}}">
+                            <image src="{{item.coverpath}}" mode="aspectFill"></image>
+                        </block>
+                        <block wx:else>
+                            <image src="../../images/orders.png" mode="aspectFill"></image>
+                        </block>
+                        </view>
+                        <!--content-->
+                        <view class="section_cont" bindtap="navigateDetail" data-aid="{{item.id}}">
+                            <view class="section_cont_sub">
+                                <text>{{item.subject}}</text>
+                            </view>
+                            <view class="section_cont_price">价格：{{item.price}}</view>
+                            <view>{{item.message}}</view>
+                        </view>
+                        <!--book-->
+                        <view class="section_book" bindtap="bookTap" data-aid="{{item.id}}">
+                                <text>立即抢单</text>
+                        </view>
+                    </view>   
+                </block>
+            </view> 
+            <view wx:else>暂无数据</view>
+          </view>
+          <!--详情-->
+        </scroll-view>
 
 </view>
